--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Looks good!</h1>
     <h1>Test for diff</h1>
     <h1>Rebasing main branch</h1>
+    <h1>Testing rebase conflict writing this on main branch</h1>
 </body>
 </html>
