Revert "bugfix: added h1 in index.html"
This reverts commit f0348e75bfb34e013b4405880f4efa31c1df7651.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Looks good!</h1>
     <h1>Test for diff</h1>
     <h1>Rebasing main branch</h1>
-    <h1>Rebase conflict test written on bugfix branch</h1>
+    <h1>Testing rebase conflict writing this on main branch</h1>
 </body>
 </html>
